--- a/public/index.html
+++ b/public/index.html
@@ -12,7 +12,7 @@
     <!-- Start Root -->
     <div id="root">
         <!-- Start Content-Wrapper -->
-        <div class="content-wrapper max-w-screen-2xl text-base mx-auto px-8 bg-slate-200 font-Karla">
+        <div class="content-wrapper max-w-screen-2xl text-base mx-auto px-8 font-Karla">
             <!-- Start Header -->
             <header class="p-6 mx-auto">
                 <nav class="flex justify-between items-center relative">
@@ -46,11 +46,24 @@
                     </div>
                 </nav>
             </header>
-            <!-- End Header -->
+            <!-- End Header --> 
             <!-- Start Main -->
             <main>
                 <!-- Start Slider -->
-                <div class="slider">Slider</div>
+                <div class="slider h-[530px] bg-slide bg-cover bg-no-repeat bg-bottom">
+                    <div class="w-full h-full flex justify-center items-center bg-gray-900 bg-opacity-30">
+                        <div class="mx-16 text-white text-center">
+                            <div class="uppercase mb-6">Best Place To Buy Coffee</div>
+                            <div class="font-medium text-5xl mb-6">Coffee Mugs</div>
+                            <div class="font-medium text-lg mb-8">The most versatile furniture system ever created. Designed to fit your life, made to move and grow.</div>
+                            <div class="flex justify-center">
+                                <div class="uppercase bg-white text-gray-900 w-max tracking-wider py-4 px-8 text-xs  cursor-pointer font-semibold hover:bg-opacity-95">
+                                    Explore Our Products
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                </div>
                 <!-- End Slider -->
                 <!-- Start Story -->
                 <div class="story">story</div>
