--- a/public/index.html
+++ b/public/index.html
@@ -66,17 +66,47 @@
                 </div>
                 <!-- End Slider -->
                 <!-- Start Story -->
-                <div class="story">story</div>
+                <div class="story">
+                    <div class="w-full h-full flex justify-center items-center ">
+                        <div class="px-4 md:px-16 lg:px-64 xl:px-96 py-32 text-center">
+                            <div class="text-3xl leading-10 mb-6">Even the all-powerful Pointing has no control about the blind texts.</div>
+                            <div class="text-gray-500 leading-7 mb-6">It is a paradisematic country, in which roasted parts of sentences fly into your mouth. <br> Even the all-powerful Pointing has no control about the blind texts it is an almost unorthographic life One day however a small line of blind text by the name of Lorem Ipsum decided to leave for the far World of Grammar.</div>
+                            <div>
+                                <a class="text-coffee-400 hover:text-coffee-600 font-semibold relative after:absolute after:-bottom-2 after:left-0 after:bg-coffee-50 after:hover:bg-coffee-200 after:h-0.5 after:w-full after:transition-all after:ease-in-out after:duration-400 " href="">Read the full Story</a>
+                            </div> 
+                        </div>
+                    </div>
+                </div>
+                <div class="td-subheadline flex justify-center items-center mb-24">
+                    <div class="td-subheadline-deco-line"></div>
+                    <div class="td-subheadline-label">Featured Mugs</div>
+                    <div class="td-subheadline-deco-line"></div>
+                </div>
                 <!-- End Story -->
                 <!-- Start Featured-mugs-->
                 <div class="featured-mugs">featured-mugs</div>
                 <!-- End Featured-mugs -->
+                <div class="td-subheadline flex justify-center items-center mb-24">
+                    <div class="td-subheadline-deco-line"></div>
+                    <div class="td-subheadline-label">More Products</div>
+                    <div class="td-subheadline-deco-line"></div>
+                </div>
                 <!-- Start more-products-->
                 <div class="more-products">more-products</div>
                 <!-- End more-products -->
+                <div class="td-subheadline flex justify-center items-center mb-24">
+                    <div class="td-subheadline-deco-line"></div>
+                    <div class="td-subheadline-label">BUY 2 MUGS AND GET A COFFEE MAGAZINE FREE</div>
+                    <div class="td-subheadline-deco-line"></div>
+                </div>
                 <!-- Start coffe-magazine-->
                 <div class="coffe-magazine">coffee-magazine</div>
                 <!-- End coffe-magazine -->
+                <div class="td-subheadline flex justify-center items-center mb-24">
+                    <div class="td-subheadline-deco-line"></div>
+                    <div class="td-subheadline-label">BEHIND THE MUGS, LIFESTYLE STORIES</div>
+                    <div class="td-subheadline-deco-line"></div>
+                </div>
                 <!-- Start lifestyle-stories-->
                 <div class="lifestyle-stories">lifestyle-stories</div>
                 <!-- End lifestyle-stories -->
