add more product

--- a/public/index.html
+++ b/public/index.html
@@ -130,7 +130,167 @@
                     <div class="td-subheadline-deco-line"></div>
                 </div>
                 <!-- Start more-products-->
-                <div class="more-products">more-products</div>
+                <div class="more-products w-[95%] lg:w-[65%] mx-auto mb-16">
+                    <div class="grid grid-cols-1 md:grid-cols-2 lg:grid-cols-3 gap-8 md:gap-4">
+                        <div class="td-product-card">
+                            <div class="h-[380px] bg-[url('./img/more-product/more-product1.jpg')] bg-cover bg-no-repeat bg-center">
+                                <a href="" alt="tienduc">
+                                    <div class="w-full h-full hover:bg-gray-900 hover:bg-opacity-10 hover:transition-all hover:ease-in-out hover:duration-400 relative group">
+                                        <div class="absolute w-[100px] bg-white py-2 px-4 top-3 right-3 text-center font-semibold text-coffee-400">On Sale.</div>
+                                        <div class="td-button absolute w-11/12 bg-white text-gray-900 bottom-4 left-1/2 -translate-x-1/2 hidden group-hover:block group-hover:animate-fadeIn">Explore Mug</div>
+                                    </div>
+                                </a>
+                            </div>
+                            <div class="text-center my-8 ">
+                                <a href="" alt="tienduc">
+                                    <div class="text-xl mb-3 hover:text-coffee-400">Red Love Cup</div>
+                                </a>
+                                <div>
+                                    <span class="text-lg text-coffee-400">$ 25.00 USD</span>
+                                    <span class="text-gray-500 line-through">$ 37.00 USD</span>
+                                </div>
+                            </div>
+                        </div>
+                        <div class="td-product-card">
+                            <div class="h-[380px] bg-[url('./img/more-product/more-product2.jpg')] bg-cover bg-no-repeat bg-center">
+                                <a href="" alt="tienduc">
+                                    <div class="w-full h-full hover:bg-gray-900 hover:bg-opacity-10 hover:transition-all hover:ease-in-out hover:duration-400 relative group">
+                                        <div class="absolute w-[100px] bg-white py-2 px-4 top-3 right-3 text-center font-semibold text-coffee-400">On Sale.</div>
+                                        <div class="td-button absolute w-11/12 bg-white text-gray-900 bottom-4 left-1/2 -translate-x-1/2 hidden group-hover:block group-hover:animate-fadeIn">Explore Mug</div>
+                                    </div>
+                                </a>
+                            </div>
+                            <div class="text-center my-8 ">
+                                <a href="" alt="tienduc">
+                                    <div class="text-xl mb-3 hover:text-coffee-400">Black Cup Tea</div>
+                                </a>
+                                <div>
+                                    <span class="text-lg text-coffee-400">$ 15.00 USD</span>
+                                    <span class="text-gray-500 line-through">$ 29.00 USD</span>
+                                </div>
+                            </div>
+                        </div>
+                        <div class="td-product-card">
+                            <div class="h-[380px] bg-[url('./img/more-product/more-product3.jpg')] bg-cover bg-no-repeat bg-center">
+                                <a href="" alt="tienduc">
+                                    <div class="w-full h-full hover:bg-gray-900 hover:bg-opacity-10 hover:transition-all hover:ease-in-out hover:duration-400 relative group">
+                                        <div class="td-button absolute w-11/12 bg-white text-gray-900 bottom-4 left-1/2 -translate-x-1/2 hidden group-hover:block group-hover:animate-fadeIn">Explore Mug</div>
+                                    </div>
+                                </a>
+                            </div>
+                            <div class="text-center my-8 ">
+                                <a href="" alt="tienduc">
+                                    <div class="text-xl mb-3 hover:text-coffee-400">B&W Essentials Mug</div>
+                                </a>
+                                <div>
+                                    <span class="text-lg text-gray-500">$ 19.00 USD</span>
+                                </div>
+                            </div>
+                        </div>
+                        <div class="td-product-card">
+                            <div class="h-[380px] bg-[url('./img/more-product/more-product4.jpg')] bg-cover bg-no-repeat bg-center">
+                                <a href="" alt="tienduc">
+                                    <div class="w-full h-full hover:bg-gray-900 hover:bg-opacity-10 hover:transition-all hover:ease-in-out hover:duration-400 relative group">
+                                        <div class="td-button absolute w-11/12 bg-white text-gray-900 bottom-4 left-1/2 -translate-x-1/2 hidden group-hover:block group-hover:animate-fadeIn">Explore Mug</div>
+                                    </div>
+                                </a>
+                            </div>
+                            <div class="text-center my-8 ">
+                                <a href="" alt="tienduc">
+                                    <div class="text-xl mb-3 hover:text-coffee-400">Winter Style Mug</div>
+                                </a>
+                                <div>
+                                    <span class="text-lg text-gray-500">$ 25.00 USD</span>
+                                </div>
+                            </div>
+                        </div>
+                        <div class="td-product-card">
+                            <div class="h-[380px] bg-[url('./img/more-product/more-product5.jpg')] bg-cover bg-no-repeat bg-center">
+                                <a href="" alt="tienduc">
+                                    <div class="w-full h-full hover:bg-gray-900 hover:bg-opacity-10 hover:transition-all hover:ease-in-out hover:duration-400 relative group">
+                                        <div class="td-button absolute w-11/12 bg-white text-gray-900 bottom-4 left-1/2 -translate-x-1/2 hidden group-hover:block group-hover:animate-fadeIn">Explore Mug</div>
+                                    </div>
+                                </a>
+                            </div>
+                            <div class="text-center my-8 ">
+                                <a href="" alt="tienduc">
+                                    <div class="text-xl mb-3 hover:text-coffee-400">Ceramic Tea</div>
+                                </a>
+                                <div>
+                                    <span class="text-lg text-gray-500">$ 46.00 USD</span>
+                                </div>
+                            </div>
+                        </div>
+                        <div class="td-product-card">
+                            <div class="h-[380px] bg-[url('./img/more-product/more-product6.jpg')] bg-cover bg-no-repeat bg-center">
+                                <a href="" alt="tienduc">
+                                    <div class="w-full h-full hover:bg-gray-900 hover:bg-opacity-10 hover:transition-all hover:ease-in-out hover:duration-400 relative group">
+                                        <div class="td-button absolute w-11/12 bg-white text-gray-900 bottom-4 left-1/2 -translate-x-1/2 hidden group-hover:block group-hover:animate-fadeIn">Explore Mug</div>
+                                    </div>
+                                </a>
+                            </div>
+                            <div class="text-center my-8 ">
+                                <a href="" alt="tienduc">
+                                    <div class="text-xl mb-3 hover:text-coffee-400">No Handle Bar Cup</div>
+                                </a>
+                                <div>
+                                    <span class="text-lg text-gray-500">$ 34.00 USD</span>
+                                </div>
+                            </div>
+                        </div>
+                        <div class="td-product-card">
+                            <div class="h-[380px] bg-[url('./img/more-product/more-product7.jpg')] bg-cover bg-no-repeat bg-center">
+                                <a href="" alt="tienduc">
+                                    <div class="w-full h-full hover:bg-gray-900 hover:bg-opacity-10 hover:transition-all hover:ease-in-out hover:duration-400 relative group">
+                                        <div class="td-button absolute w-11/12 bg-white text-gray-900 bottom-4 left-1/2 -translate-x-1/2 hidden group-hover:block group-hover:animate-fadeIn">Explore Mug</div>
+                                    </div>
+                                </a>
+                            </div>
+                            <div class="text-center my-8 ">
+                                <a href="" alt="tienduc">
+                                    <div class="text-xl mb-3 hover:text-coffee-400">Espresso Cup by Mugs.co</div>
+                                </a>
+                                <div>
+                                    <span class="text-xl text-gray-500">$ 25.00 USD</span>
+                                </div>
+                            </div>
+                        </div>
+                        <div class="td-product-card">
+                            <div class="h-[380px] bg-[url('./img/more-product/more-product8.jpg')] bg-cover bg-no-repeat bg-center">
+                                <a href="" alt="tienduc">
+                                    <div class="w-full h-full hover:bg-gray-900 hover:bg-opacity-10 hover:transition-all hover:ease-in-out hover:duration-400 relative group">
+                                        <div class="td-button absolute w-11/12 bg-white text-gray-900 bottom-4 left-1/2 -translate-x-1/2 hidden group-hover:block group-hover:animate-fadeIn">Explore Mug</div>
+                                    </div>
+                                </a>
+                            </div>
+                            <div class="text-center my-8 ">
+                                <a href="" alt="tienduc">
+                                    <div class="text-xl mb-3 hover:text-coffee-400">Pink Premium Ceramic</div>
+                                </a>
+                                <div>
+                                    <span class="text-lg text-gray-500">$ 99.00 USD</span>
+                                </div>
+                            </div>
+                        </div>
+                        <div class="td-product-card">
+                            <div class="h-[380px] bg-[url('./img/more-product/more-product9.jpg')] bg-cover bg-no-repeat bg-center">
+                                <a href="" alt="tienduc">
+                                    <div class="w-full h-full hover:bg-gray-900 hover:bg-opacity-10 hover:transition-all hover:ease-in-out hover:duration-400 relative group">
+                                        <div class="td-button absolute w-11/12 bg-white text-gray-900 bottom-4 left-1/2 -translate-x-1/2 hidden group-hover:block group-hover:animate-fadeIn">Explore Mug</div>
+                                    </div>
+                                </a>
+                            </div>
+                            <div class="text-center my-8 ">
+                                <a href="" alt="tienduc">
+                                    <div class="text-xl mb-3 hover:text-coffee-400">Summer Designer Cup</div>
+                                </a>
+                                <div>
+                                    <span class="text-xl text-gray-500">$ 29.00 USD</span>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                </div>
                 <!-- End more-products -->
                 <div class="td-subheadline flex justify-center items-center mb-24">
                     <div class="td-subheadline-deco-line"></div>
