--- a/public/index.html
+++ b/public/index.html
@@ -248,10 +248,10 @@
                             </div>
                             <div class="text-center my-8 ">
                                 <a href="" alt="tienduc">
-                                    <div class="text-xl mb-3 hover:text-coffee-400">Espresso Cup by Mugs.co</div>
+                                    <div class="text-xl mb-3 hover:text-coffee-400 gap">Espresso Cup by Mugs.co</div>
                                 </a>
                                 <div>
-                                    <span class="text-xl text-gray-500">$ 25.00 USD</span>
+                                    <span class="text-lg text-gray-500">$ 25.00 USD</span>
                                 </div>
                             </div>
                         </div>
@@ -285,7 +285,7 @@
                                     <div class="text-xl mb-3 hover:text-coffee-400">Summer Designer Cup</div>
                                 </a>
                                 <div>
-                                    <span class="text-xl text-gray-500">$ 29.00 USD</span>
+                                    <span class="text-lg text-gray-500">$ 29.00 USD</span>
                                 </div>
                             </div>
                         </div>
@@ -298,7 +298,23 @@
                     <div class="td-subheadline-deco-line"></div>
                 </div>
                 <!-- Start coffe-magazine-->
-                <div class="coffe-magazine">coffee-magazine</div>
+                <div class="coffe-magazine w-[95%] lg:w-[65%] mx-auto mb-24">
+                    <div class="flex flex-col md:flex-row gap-5 justify-center items-center">
+                        <div class="basis-1/2 md:flex md:flex-row gap-5 w-full h-full mb-5 md:mb-0">
+                            <div class="h-[280px] basis-2/3 bg-[url('./img/magazine-coffee/magazine-coffee1.jpg')] bg-cover bg-no-repeat bg-center mb-5 md:mb-0"></div>
+                            <div class="basis-1/3 flex flex-row md:flex-col gap-5">
+                                <div class="h-[130px] basis-1/2 bg-[url('./img/magazine-coffee/magazine-coffee2.jpg')] bg-cover bg-no-repeat bg-center"></div>
+                                <div class="h-[130px] basis-1/2 bg-[url('./img/magazine-coffee/magazine-coffee3.jpg')] bg-cover bg-no-repeat bg-center"></div>
+                            </div>
+                        </div>
+                        <div class="basis-1/2 mx-auto md:pl-10 text-center md:text-left ">
+                            <div class="uppercase tracking-widest text-gray-500 font-medium text-xs mb-5">PREMIUM OFFER</div>
+                            <div class="text-4xl mb-5">Get our Coffee Magazine</div>
+                            <div class="text-gray-500 leading-7 mb-5">The most versatile furniture system ever created. Designed to fit your life.</div>
+                            <div class="td-button w-max bg-gray-800 text-white mx-auto md:mx-0">Start Shopping</div>
+                        </div>
+                    </div>
+                </div>
                 <!-- End coffe-magazine -->
                 <div class="td-subheadline flex justify-center items-center mb-24">
                     <div class="td-subheadline-deco-line"></div>
