--- a/public/index.html
+++ b/public/index.html
@@ -130,7 +130,7 @@
                     <div class="td-subheadline-deco-line"></div>
                 </div>
                 <!-- Start more-products-->
-                <div class="more-products w-[95%] lg:w-[65%] mx-auto mb-16">
+                <div class="more-products w-[95%] xl:w-[65%] mx-auto mb-16">
                     <div class="grid grid-cols-1 md:grid-cols-2 lg:grid-cols-3 gap-8 md:gap-4">
                         <div class="td-product-card">
                             <div class="h-[380px] bg-[url('./img/more-product/more-product1.jpg')] bg-cover bg-no-repeat bg-center">
@@ -300,11 +300,11 @@
                 <!-- Start coffe-magazine-->
                 <div class="coffe-magazine w-[95%] lg:w-[65%] mx-auto mb-24">
                     <div class="flex flex-col md:flex-row gap-5 justify-center items-center">
-                        <div class="basis-1/2 md:flex md:flex-row gap-5 w-full h-full mb-5 md:mb-0">
-                            <div class="h-[280px] basis-2/3 bg-[url('./img/magazine-coffee/magazine-coffee1.jpg')] bg-cover bg-no-repeat bg-center mb-5 md:mb-0"></div>
+                        <div class="basis-1/2 md:flex md:flex-row gap-5 w-full h-full mb-3 xs:mb-5 md:mb-0">
+                            <div class="h-[280px] basis-2/3 bg-[url('./img/magazine-coffee/magazine-coffee1.jpg')] bg-cover bg-no-repeat bg-center mb-3 xs:mb-5 md:mb-0"></div>
                             <div class="basis-1/3 flex flex-row md:flex-col gap-5">
-                                <div class="h-[130px] basis-1/2 bg-[url('./img/magazine-coffee/magazine-coffee2.jpg')] bg-cover bg-no-repeat bg-center"></div>
-                                <div class="h-[130px] basis-1/2 bg-[url('./img/magazine-coffee/magazine-coffee3.jpg')] bg-cover bg-no-repeat bg-center"></div>
+                                <div class="h-[130px] xs:h-[200px] md:h-[130px] basis-1/2 bg-[url('./img/magazine-coffee/magazine-coffee2.jpg')] bg-cover bg-no-repeat bg-center"></div>
+                                <div class="h-[130px] xs:h-[200px] md:h-[130px] basis-1/2 bg-[url('./img/magazine-coffee/magazine-coffee3.jpg')] bg-cover bg-no-repeat bg-center"></div>
                             </div>
                         </div>
                         <div class="basis-1/2 mx-auto md:pl-10 text-center md:text-left ">
@@ -315,6 +315,7 @@
                         </div>
                     </div>
                 </div>
+                <div class="bg-[url('./img/parallax.jpg')] bg-cover bg-no-repeat bg-center h-[400px] w-[100vw] relative left-[calc(-50vw+50%)] bg-fixed mb-24"></div>
                 <!-- End coffe-magazine -->
                 <div class="td-subheadline flex justify-center items-center mb-24">
                     <div class="td-subheadline-deco-line"></div>
