--- a/public/index.html
+++ b/public/index.html
@@ -107,7 +107,7 @@
                                 <a href="" alt="tienduc">
                                     <div class="w-full h-full hover:bg-gray-900 hover:bg-opacity-10 hover:transition-all hover:ease-in-out hover:duration-400 relative group">
                                         <div class="absolute w-[100px] bg-white py-2 px-4 top-3 right-3 text-center font-semibold text-coffee-400">On Sale.</div>
-                                        <div class="td-button absolute w-11/12 bg-white text-gray-900 bottom-4 left-1/2 -translate-x-1/2 hidden group-hover:block group-hover:animate-fadeIn ">Explore Mug</div>
+                                        <div class="td-button absolute w-11/12 bg-white text-gray-900 bottom-4 left-1/2 -translate-x-1/2 hidden group-hover:block group-hover:animate-fadeIn">Explore Mug</div>
                                     </div>
                                 </a>
                             </div>
@@ -323,7 +323,48 @@
                     <div class="td-subheadline-deco-line"></div>
                 </div>
                 <!-- Start lifestyle-stories-->
-                <div class="lifestyle-stories">lifestyle-stories</div>
+                <div class="lifestyle-stories w-[95%] lg:w-[65%] mx-auto mb-24">
+                    <div class="grid grid-cols-1 md:grid-cols-2 lg:grid-cols-3 gap-8 md:gap-4 mx-auto">
+                        <div class="basis-1/3 w-full h-full flex flex-col gap-5">
+                            <div class="bg-[url('./img/lifestory-coffee1.jpg')] bg-cover bg-no-repeat bg-center w-full h-[300px]">
+                                <a href="">
+                                    <div class="w-full h-full hover:bg-gray-900 hover:bg-opacity-10 hover:transition-all hover:ease-in-out hover:duration-400 relative group">
+                                        <div class="td-button absolute w-11/12 bg-white text-gray-900 bottom-4 left-1/2 -translate-x-1/2 hidden group-hover:block group-hover:animate-fadeIn">Read The Full Story</div>
+                                    </div>
+                                </a>
+                            </div>
+                            <div class="text-xl text-gray-700 hover:text-coffee-400 cursor-pointer hover:transition-all hover:ease-in-out hover:duration-200 text-center lg:text-left">Health Check: why do I get a headache when I haven’t had my coffee?</div>
+                            <div class="text-gray-500 leading-7 text-center lg:text-left">It is a paradisematic country, in which roasted parts of sentences fly into your mouth.</div>
+                            <div class="uppercase mx-4 tracking-widest text-gray-500 font-medium text-xs text-center">OCTOBER 9, 2018</div>
+                        </div>
+                        <div class="basis-1/3 w-full h-full flex flex-col gap-5">
+                            <div class="bg-[url('./img/lifestory-coffee2.jpg')] bg-cover bg-no-repeat bg-center w-full h-[300px]">
+                                <a href="">
+                                    <div class="w-full h-full hover:bg-gray-900 hover:bg-opacity-10 hover:transition-all hover:ease-in-out hover:duration-400 relative group">
+                                        <div class="td-button absolute w-11/12 bg-white text-gray-900 bottom-4 left-1/2 -translate-x-1/2 hidden group-hover:block group-hover:animate-fadeIn">Read The Full Story</div>
+                                    </div>
+                                </a>
+                            </div>
+                            <div class="text-xl text-gray-700 hover:text-coffee-400 cursor-pointer hover:transition-all hover:ease-in-out hover:duration-200 text-center lg:text-left"> How long does a cup of coffee keep you awake?</div>
+                            <div class="text-gray-500 leading-7 text-center lg:text-left">It is a paradisematic country, in which roasted parts. Vel qui et ad voluptatem.</div>
+                            <div class="uppercase mx-4 tracking-widest text-gray-500 font-medium text-xs text-center">OCTOBER 9, 2018</div>
+                        </div>
+                        <div class="basis-1/3 w-full h-full flex flex-col gap-5">
+                            <div class="bg-[url('./img/lifestory-coffee1.jpg')] bg-cover bg-no-repeat bg-center w-full h-[300px]">
+                                <a href="">
+                                    <div class="w-full h-full hover:bg-gray-900 hover:bg-opacity-10 hover:transition-all hover:ease-in-out hover:duration-400 relative group">
+                                        <div class="td-button absolute w-11/12 bg-white text-gray-900 bottom-4 left-1/2 -translate-x-1/2 hidden group-hover:block group-hover:animate-fadeIn">Read The Full Story</div>
+                                    </div>
+                                </a>
+                            </div>
+                            <div class="text-xl text-gray-700 hover:text-coffee-400 cursor-pointer hover:transition-all hover:ease-in-out hover:duration-200 text-center lg:text-left">Recent research suggests that heavy coffee drinkers may reap health benefits. </div>
+                            <div class="text-gray-500 leading-7 text-center lg:text-left">It is a paradisematic country, in which roasted parts of sentences fly into your mouth.</div>
+                            <div class="uppercase mx-4 tracking-widest text-gray-500 font-medium text-xs text-center">OCTOBER 9, 2018</div>
+                        </div>
+                        
+                        
+                    </div>
+                </div>
                 <!-- End lifestyle-stories -->
                 <!-- Start subscribe-us-->
                 <div class="subscribe-us">subscribe-us</div>
