--- a/public/index.html
+++ b/public/index.html
@@ -367,7 +367,22 @@
                 </div>
                 <!-- End lifestyle-stories -->
                 <!-- Start subscribe-us-->
-                <div class="subscribe-us">subscribe-us</div>
+                <div class="subscribe-us h-[350px] bg-[#1d1f2e] flex flex-col justify-center items-center mb-24">
+                    <div class= "mb-4 text-gray-200 opacity-60 text-xs flex items-center gap-2">
+                            <div class="w-5 h-px bg-white opacity-50"></div>
+                            <div class="font-bold text-xs uppercase text-center ">SIGN UP AND GET FREE COFFEE BAGS</div>
+                            <div class="w-5 h-px bg-white opacity-50"></div>
+                    </div>
+                    <div class="text-4xl text-white mb-8">Coffee Updates</div>
+                    <div class="flex flex-col md:flex-row justify-center items-center gap-3">
+                            <div class="text-center">
+                                <input type="email" placeholder="duc.laitien2002@gmail.com" class="px-6 py-4 w-[350px] max-w-[80%] xs:max-w-full bg-transparent border-[1px] border-gray-700 outline-none text-white leading-5 hover:border-gray-300 focus:border-gray-300 duration-500 placeholder:text-xs placeholder:tracking-widest placeholder:font-semibold placeholder:uppercase ">
+                            </div>
+                            <div class="">
+                                <button type="submit" class="td-button bg-white text-gray-900 w-max h-max-[54px]">Subcribe</button>           
+                            </div>
+                    </div>
+                </div>
                 <!-- End subscribe-us -->
             </main>
             <!-- End Main -->
