--- a/public/index.html
+++ b/public/index.html
@@ -86,14 +86,14 @@
                     <div class="grid grid-cols-1 lg:grid-cols-2 gap-8 lg:gap-4">
                         <div class="td-product-card">
                             <div class="h-[400px] sm:h-[540px] bg-[url('./img/featuredmug1.jpg')] bg-cover bg-no-repeat bg-center">
-                                <a href="" alt="tienduc">
+                                <a href="#" alt="tienduc">
                                     <div class="w-full h-full hover:bg-gray-900 hover:bg-opacity-10 hover:transition-all hover:ease-in-out hover:duration-400 relative group">
                                         <div class="td-button absolute w-11/12 bg-white text-gray-900 bottom-4 left-1/2 -translate-x-1/2 hidden group-hover:block group-hover:animate-fadeIn">Explore Mug</div>
                                     </div>
                                 </a>
                             </div>
                             <div class="text-center mt-8 ">
-                                <a href="" alt="tienduc">
+                                <a href="#" alt="tienduc">
                                     <div class="text-xl mb-3 hover:text-coffee-400">Pink Premium Ceramic</div>
                                 </a>
                                 <div>
@@ -134,7 +134,7 @@
                     <div class="grid grid-cols-1 md:grid-cols-2 lg:grid-cols-3 gap-8 md:gap-4">
                         <div class="td-product-card">
                             <div class="h-[380px] bg-[url('./img/more-product/more-product1.jpg')] bg-cover bg-no-repeat bg-center">
-                                <a href="" alt="tienduc">
+                                <a href="#" alt="tienduc">
                                     <div class="w-full h-full hover:bg-gray-900 hover:bg-opacity-10 hover:transition-all hover:ease-in-out hover:duration-400 relative group">
                                         <div class="absolute w-[100px] bg-white py-2 px-4 top-3 right-3 text-center font-semibold text-coffee-400">On Sale.</div>
                                         <div class="td-button absolute w-11/12 bg-white text-gray-900 bottom-4 left-1/2 -translate-x-1/2 hidden group-hover:block group-hover:animate-fadeIn">Explore Mug</div>
@@ -142,7 +142,7 @@
                                 </a>
                             </div>
                             <div class="text-center my-8 ">
-                                <a href="" alt="tienduc">
+                                <a href="#" alt="tienduc">
                                     <div class="text-xl mb-3 hover:text-coffee-400">Red Love Cup</div>
                                 </a>
                                 <div>
@@ -327,7 +327,7 @@
                     <div class="grid grid-cols-1 md:grid-cols-2 lg:grid-cols-3 gap-8 md:gap-4 mx-auto">
                         <div class="basis-1/3 w-full h-full flex flex-col gap-5">
                             <div class="bg-[url('./img/lifestory-coffee1.jpg')] bg-cover bg-no-repeat bg-center w-full h-[300px]">
-                                <a href="">
+                                <a href="#">
                                     <div class="w-full h-full hover:bg-gray-900 hover:bg-opacity-10 hover:transition-all hover:ease-in-out hover:duration-400 relative group">
                                         <div class="td-button absolute w-11/12 bg-white text-gray-900 bottom-4 left-1/2 -translate-x-1/2 hidden group-hover:block group-hover:animate-fadeIn">Read The Full Story</div>
                                     </div>
@@ -339,7 +339,7 @@
                         </div>
                         <div class="basis-1/3 w-full h-full flex flex-col gap-5">
                             <div class="bg-[url('./img/lifestory-coffee2.jpg')] bg-cover bg-no-repeat bg-center w-full h-[300px]">
-                                <a href="">
+                                <a href="#">
                                     <div class="w-full h-full hover:bg-gray-900 hover:bg-opacity-10 hover:transition-all hover:ease-in-out hover:duration-400 relative group">
                                         <div class="td-button absolute w-11/12 bg-white text-gray-900 bottom-4 left-1/2 -translate-x-1/2 hidden group-hover:block group-hover:animate-fadeIn">Read The Full Story</div>
                                     </div>
@@ -378,7 +378,7 @@
                             <div class="text-center">
                                 <input type="email" placeholder="duc.laitien2002@gmail.com" class="px-6 py-4 w-[350px] max-w-[80%] xs:max-w-full bg-transparent border-[1px] border-gray-700 outline-none text-white leading-5 hover:border-gray-300 focus:border-gray-300 duration-500 placeholder:text-xs placeholder:tracking-widest placeholder:font-semibold placeholder:uppercase ">
                             </div>
-                            <div class="">
+                            <div>
                                 <button type="submit" class="td-button bg-white text-gray-900 w-max h-max-[54px]">Subcribe</button>           
                             </div>
                     </div>
@@ -387,7 +387,46 @@
             </main>
             <!-- End Main -->
             <!-- Start Footer -->
-            <footer>footer</footer>
+            <footer class="w-[95%] lg:w-[65%] mx-auto pb-24 text-sm text-gray-500">
+                <div class="flex flex-col md:flex-row text-center md:text-left gap-12 md:gap-8">
+                    <div class="basis-1/3 flex flex-col justify-between">
+                        <div>
+                            <div class="font-bold text-gray-800 text-xl mb-4">CoffeeStyle.</div>
+                            <div class="text-gray-900">Delivering the best coffee life since 1996. From coffee geeks to the real ones.</div>
+                        </div>
+                        <div class="text-gray-400 hover:text-coffee-400">CoffeeStyle Inc. © 1996</div>
+                    </div>
+                    <div class="basis-1/6">
+                        <div class="uppercase font-semibold text-gray-800 tracking-wider mb-8 md:mb-4">Menu</div>
+                        <div class="flex flex-col gap-3">
+                            <div><a href="#" class="hover:text-coffee-400">Home</a></div>
+                            <div><a href="#" class="hover:text-coffee-400">Our Products</a></div>
+                            <div><a href="#" class="hover:text-coffee-400">About</a></div>
+                            <div><a href="#" class="hover:text-coffee-400">Contact</a></div>
+                            <div><a href="#" class="hover:text-coffee-400">StyleGuide</a></div>
+                        </div>
+                    </div>
+                    <div class="basis-1/6">
+                        <div class="uppercase font-semibold text-gray-800 tracking-wider mb-4">Follow Us</div>
+                        <div class="flex flex-col gap-3">
+                            <div><a href="#" class="hover:text-coffee-400">Facebook</a></div>
+                            <div><a href="#" class="hover:text-coffee-400">Instagram</a></div>
+                            <div><a href="#" class="hover:text-coffee-400">Pinterest</a></div>
+                            <div><a href="#" class="hover:text-coffee-400">Github</a></div>
+                        </div>
+                    </div>
+                    <div class="basis-1/3 flex flex-col justify-between">
+                        <div>
+                            <div class="uppercase font-semibold text-gray-800 tracking-wider mb-4">Contact Us</div>
+                        <div class="mb-4">
+                            We’re Always Happy to Help
+                        </div>
+                        <div class="font-semibold text-gray-800 text-[22px] hover:text-coffee-400"><a href="mailto:duc.laitien2002@gmail.com">duc.laitien2002@gmail.com</a></div>
+                        </div>
+                        <div><a href="https://facebook.com/ChanDuc0307" target="_blank" class="hover:text-coffee-400 text-gray-400">Powered by Duc</a></div>
+                    </div>
+                </div>
+            </footer>
             <!-- End Footer -->
         </div>
         <!-- End Content-Wrapper -->
