--- a/public/index.html
+++ b/public/index.html
@@ -26,7 +26,7 @@
                         <li class="top-menu-item"><a href="#">About</a></li>
                         <li class="top-menu-item"><a href="#">Contact</a></li>
                         <li class="top-menu-item"><a href="#">StyleGuide</a></li>
-                        <li class="top-menu-item top-menu-item-active"><a href="https://facebook.com/ChanDuc0307">Tiến Đức</a></li>
+                        <li class="top-menu-item top-menu-item-active"><a href="https://facebook.com/ChanDuc0307">TienDuc</a></li>
                     </ul>
                     <ul class="basis-3/6 lg:basis-1/6 flex justify-end lg:justify-start items-center ml-16 uppercase text-sm text-gray-500 font-medium">
                         <li class="top-menu-icon">
@@ -50,7 +50,7 @@
             <!-- Start Main -->
             <main>
                 <!-- Start Slider -->
-                <div class="slider h-[530px] bg-slide bg-cover bg-no-repeat bg-bottom">
+                <div class="slider h-[530px] bg-slide bg-cover bg-no-repeat bg-bottom mb-24">
                     <div class="w-full h-full flex justify-center items-center bg-gray-900 bg-opacity-30">
                         <div class="mx-16 text-white text-center">
                             <div class="uppercase mb-6">Best Place To Buy Coffee</div>
@@ -66,8 +66,16 @@
                 </div>
                 <!-- End Slider -->
                 <!-- Start Story -->
-                <div class="story flex justify-center items-center">
-                    <div class="px-4 md:px-16 lg:px-64 xl:px-96 py-32 text-center">
+                <div class="story flex flex-col lg:flex-row justify-center items-center w-[95%] lg:w-[65%] mx-auto mb-24 gap-8 lg:gap-6">
+                    <div class="basis-1/2">
+                        <video autoplay loop muted class="w-full h-full object-cover min-h-[350px]">
+                            <source type="video/mp4" src="./video/Y2meta.app-Coffee reels - macro videos-(1080p).mp4">
+                        </video>
+                        <div class="text-center mt-2">
+                            Source video by <a href="https://www.youtube.com/@popmotionfilms5390" class="font-semibold text-xl text-coffee-400">Popmotion Films</a>
+                        </div>
+                    </div>
+                    <div class="basis-1/2 text-center lg:text-left">
                         <div class="text-3xl leading-10 mb-6">Even the all-powerful Pointing has no control about the blind texts.</div>
                         <div class="text-gray-500 leading-7 mb-6">It is a paradisematic country, in which roasted parts of sentences fly into your mouth. <br> Even the all-powerful Pointing has no control about the blind texts it is an almost unorthographic life One day however a small line of blind text by the name of Lorem Ipsum decided to leave for the far World of Grammar.</div>
                         <div>
